--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 	<title>Final Quiz App</title>
 </head>
 
@@ -46,6 +48,7 @@
 				<label for="answer-4">Placeholder 4</label>
 			</div>
 		</fieldset>
+		<br>
 		<button type="submit" class="question-submit">Submit</button>
 	</form>
 
