added basketball image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<h1 class='title'>Basketball Quiz - 12 Questions</h1>
 	</header>
 
+	<img class="basketball-image" src="https://i.imgur.com/hzRq22X.jpg"></img>
+
 	<div class="menu-begin">
 	<button type="button" class="intro-begin" id="js-intro-begin">Begin</button>
 	</div>
