--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link rel="shortcut icon" type="image/ico" href="/favicon.ico">
+	
 	<title>Final Quiz App</title>
 </head>
 
